# id-generator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements-test.txt  space-estimator.py
.github/workflows/: docker-build.yml  publish-helm.yml
charts/id-generator/: questions.yaml  values.yaml
charts/id-generator/templates/: _helpers.tpl
charts/id-generator/templates/id-generator/: configmap.yaml  deployment.yaml  gateway.yaml  hpa.yaml  serviceaccount.yaml  virtualservice.yaml
charts/openg2p-id-generator/: Chart.yaml  README.md  questions.yaml  values.yaml
charts/openg2p-id-generator/charts/: postgres-init-0.0.0-develop.tgz
charts/openg2p-id-generator/templates/id-generator/: service.yaml
config/: default.yaml
docs/: api.md  functional-specs.md  helm-chart.md  local-setup.md  openapi.json  technical-architecture.md  test-plan.md
scripts/: generate_openapi.py  space-estimator.py
src/id_generator/: config.py  db.py  main.py  models.py
src/id_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/id_generator/api/: router.py  schema.py
src/id_generator/generator/: engine.py  filters.py  verhoeff.py
src/id_generator/pool/: issuer.py  manager.py
tests/: conftest.py  pytest.ini  report_plugin.py  test_api_contract.py  test_cases.yaml  test_exhaustion.py  test_exhaustive.py  test_filters.py  test_performance.py
tests/helpers/: __init__.py  filters.py  verhoeff.py
