[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "id-generator"
version = "0.1.0"
description = "Unique numeric ID generator service with pre-generated pools and multi-namespace support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-html>=4.0",
    "pytest-ordering>=0.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
